--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -4,4 +4,5 @@
   position: relative;
   top: 50px;
   list-style: none;
+  padding-left: 0px;
 }
